amazon prime, heroku app

--- a/popup.html
+++ b/popup.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
     <h2>Add Subscription to Substracked</h2>
-    <h3>Service: Netflix</h3>
+    <h3>Service: Amazon Prime</h3>
     <form class="simple_form new_subscription" id="new_subscription" novalidate="novalidate" accept-charset="UTF-8" method="POST">
       <input type="hidden" name="authenticity_token" value="desZ0VwcALpW6e_7uSclH8u87HdHQUupNaWw9lQMgwE70HuKCGWMVB7-oxOOLU-HCjBoorhLlILqb6Fs5hIw6w" autocomplete="off">
 
