added advanced styling to the pop up

--- a/popup.html
+++ b/popup.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div class="pop-up-container">
+      <div class="pop-up-content">
       <h3 class="pop-up-titel">
         <span style="text-transform: uppercase"><span class="text-primary">Subs</span>tracked</span>
       </h3>
@@ -58,6 +59,12 @@
           <button value="Add subscription" class="btn btn-primary w-100 rounded-0 mx-0" id="send-data">Add subscription</button>
         </div>
       </form>
+    </div>
+      <!-- Decoration Elements -->
+      <div class="circle circle-one"></div>
+      <div class="circle circle-two"></div>
+      <div class="circle circle-three"></div>
+      <div class="circle circle-four"></div>
   </div>
   </body>
   <script type="text/javascript" src="popup.js"></script>
