Japan as default region

--- a/popup.html
+++ b/popup.html
@@ -43,7 +43,7 @@
               <option value="Germany">Germany</option>
               <option value="Hong Kong">Hong Kong</option>
               <option value="Italy">Italy</option>
-              <option value="Japan">Japan</option>
+              <option value="Japan" selected>Japan</option>
               <option value="Singapore">Singapore</option>
               <option value="United States of America">United States of America</option>
               <option value="United Kingdom">United Kingdom</option>
