auto detect service

--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,7 @@
         <h3 class="pop-up-titel">
           <span style="text-transform: uppercase"><span class="text-primary">Subs</span>tracked</span>
         </h3>
-        <h5 class="mb-3">Add <span class="text-primary">Amazon Prime</span> to your subscriptions</h5>
+        <h5 class="mb-3">Add <span class="text-primary" id="subsName">Service</span> to your subscriptions</h5>
         <form class="simple_form new_subscription" id="new_subscription" novalidate="novalidate" accept-charset="UTF-8" method="POST">
           <input type="hidden" name="authenticity_token" value="desZ0VwcALpW6e_7uSclH8u87HdHQUupNaWw9lQMgwE70HuKCGWMVB7-oxOOLU-HCjBoorhLlILqb6Fs5hIw6w" autocomplete="off">
 
