added auto-fill functionality

--- a/popup.html
+++ b/popup.html
@@ -68,5 +68,5 @@
       </div>
     </div>
   </body>
-  <script type="text/javascript" src="popup.js"></script>
+  <script type="module" src="popup.js"></script>
 </html>
