--- a/popup.html
+++ b/popup.html
@@ -39,7 +39,7 @@
                 Start date <abbr title="required">*</abbr>
               </label>
               <div class="d-flex flex-row justify-content-between align-items-center">
-                <input class="form-select mx-1 date required" style="margin-right: 0rem !important;
+                <input class="form-control mx-1 date required" style="margin-right: 0rem !important;
       margin-left: 0rem !important;" type="date" name="subscription[start_date]" id="subscription_start_date">
               </div>
             </div>
@@ -49,7 +49,7 @@
                 Renewal date <abbr title="required">*</abbr>
               </label>
               <div class="d-flex flex-row justify-content-between align-items-center">
-                <input class="form-select mx-1 date required" style="margin-right: 0rem !important;
+                <input class="form-control mx-1 date required" style="margin-right: 0rem !important;
       margin-left: 0rem !important;" type="date" name="subscription[renewal_date]" id="subscription_renewal_date">
               </div>
             </div>
