--- a/popup.html
+++ b/popup.html
@@ -78,7 +78,7 @@
 
           <div class="modal-footer d-flex justify-content-between border-0 p-0">
             <button value="Add subscription" class="btn btn-primary w-100 rounded-0 mx-0" id="send-data">Add subscription</button>
-            <button class="btn text-primary mx-auto">Logout</button>
+            <button class="btn text-secondary mx-auto">Log out</button>
           </div>
 
         </form>
