region not required

--- a/popup.html
+++ b/popup.html
@@ -54,7 +54,7 @@
               </div>
             </div>
             <!-- Region -->
-            <div class="mb-3 select required subscription_region"><label class="form-label select required" for="subscription_region">Region <abbr title="required">*</abbr></label>
+            <div class="mb-3 select required subscription_region"><label class="form-label select required" for="subscription_region">Region</label>
               <select class="form-select select required" name="subscription[region]" id="subscription_region">
                 <option value="" label=" "></option>
                 <option value="Australia">Australia</option>
