--- a/popup.html
+++ b/popup.html
@@ -58,7 +58,7 @@
                 <option value="Singapore">Singapore</option>
                 <option value="United States of America">United States of America</option>
                 <option value="United Kingdom">United Kingdom</option>
-                <option value="United Kingdom">Worldwide</option>
+                <option value="Worldwide">Worldwide</option>
               </select>
             </div>
             <!-- Notes -->
