--- a/popup.html
+++ b/popup.html
@@ -70,7 +70,7 @@
 
           <div class="modal-footer d-flex justify-content-between border-0 p-0">
             <button value="Add subscription" class="btn btn-primary w-100 rounded-0 mx-0" id="send-data">Add subscription</button>
-            <button class="btn text-secondary mx-auto">Log out</button>
+            <button class="btn text-secondary mx-auto" id="logout">Log out</button>
           </div>
 
         </form>
